--- a/H1EMU-Launcher/SteamFrame/DownloadStatus.xaml
+++ b/H1EMU-Launcher/SteamFrame/DownloadStatus.xaml
@@ -41,20 +41,22 @@
             </FlowDocument>
         </RichTextBox>
 
-        <!-- Progress bar -->
+        <!-- Status progress bar -->
         <ProgressBar x:Name="downloadProgress"
             Grid.Row="1"
             Height="35"
             Margin="0,0,0,0"
             Style="{DynamicResource ProgressBar}"/>
-        
+
+        <!-- Progress bar outline (usually the fill colour overlaps the outline of the progress bar) -->
         <ProgressBar
             Grid.Row="1"
             Height="35"
             Margin="0,0,0,0"
             Background="Transparent"
             Style="{DynamicResource ProgressBar}"/>
-        
+
+        <!-- Status text to overlay progress bar -->
         <TextBlock x:Name="downloadProgressText"
                    Grid.Row="1"
                    FontSize="16"
